Fix bottom spacing on left-menu for overflow
Fix https://github.com/gitterHQ/change/issues/40

--- a/public/js/views/menu/room/panel/panel-view.less
+++ b/public/js/views/menu/room/panel/panel-view.less
@@ -86,5 +86,10 @@
 }
 
 .panel-content {
-  padding-bottom: 8rem;
+  &:after {
+    content: '';
+    flex-shrink: 0;
+    display: block;
+    height: 8rem;
+  }
 }
